--- a/style.css
+++ b/style.css
@@ -1,3 +1,12 @@
-.khairul{
-    color: white;
-}
+/*
+Theme Name: USABDLifepartner
+Theme URI: https://usabdlifepartner.com/
+Author: Khairul Islam Joy
+Author URI: https://github.com/khairul166
+Description: A custom matchmaking WordPress theme for USABDLifepartner. Includes login, registration, profile, interest system, and membership features.
+Version: 1.0
+License: GNU General Public License v2 or later
+License URI: https://www.gnu.org/licenses/gpl-2.0.html
+Text Domain: usabdlifepartner
+Tags: matchmaking, membership, clean, responsive, custom-profile
+*/
