--- a/style.css
+++ b/style.css
@@ -4,9 +4,11 @@ Theme URI: https://usabdlifepartner.com/
 Author: Khairul Islam
 Author URI: https://www.linkedin.com/in/khirul166/
 Description: A custom matchmaking WordPress theme for USABDLifepartner. Includes login, registration, profile, interest system, and membership features.
-Version: 1.0
+Version: 1.0.1
 License: GNU General Public License v2 or later
 License URI: https://www.gnu.org/licenses/gpl-2.0.html
 Text Domain: usabdlifepartner
 Tags: matchmaking, membership, clean, responsive, custom-profile
+
+GitHub Theme URI: https://github.com/khairul166/USABDLifepartner
 */
