--- a/style.css
+++ b/style.css
@@ -10,5 +10,5 @@ License URI: https://www.gnu.org/licenses/gpl-2.0.html
 Text Domain: usabdlifepartner
 Tags: matchmaking, membership, clean, responsive, custom-profile
 
-GitHub Theme URI: khairul166/usabdlifepartner
+GitHub Theme URI: https://github.com/khairul166/usabdlifepartner
 */
