--- a/style.css
+++ b/style.css
@@ -11,4 +11,5 @@ Text Domain: usabdlifepartner
 Tags: matchmaking, membership, clean, responsive, custom-profile
 
 GitHub Theme URI: https://github.com/khairul166/usabdlifepartner
+Primary Branch: main 
 */
